# c_raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  camera.c  camera.h  color.c  color.h  main.c  ray.c  ray.h  spheres.c  spheres.h  vec3.c  vec3.h
src/: CMakeLists.txt  camera.c  camera.h  color.c  color.h  interval.c  interval.h  main.c  prng.c  prng.h  ray.c  ray.h  spheres.c  spheres.h  vec3.c  vec3.h
